# anchor-mcp

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
src/: main.rs
src/mcp/: mod.rs  prompts.rs  resources.rs  tools.rs  types.rs  utilities.rs
src/mcp/templates/: prompts.json
